public/res/index.css
@font-face {
  font-family: "Lora";
  font-style: normal;
  font-weight: 700;
  src: url("lora.woff2") format("woff2");
}

@font-face {
  font-family: "Garamond";
  src: url("EBGaramond-Regular.ttf") format("truetype");
}

:root {
  --pad: 1rem;
  --pad-large: 2rem;
  --space: calc(var(--pad) * 4);
  --text-width: 40rem;
  --colour-bg: #fffff8;
  --colour-text: #383838;
  --colour-heading: #aaa;
  --colour-primary: #1166aa;
  --colour-secondary: #e2efff;
}

body {
  background-color: var(--colour-bg);
  font-family: "Garamond", monospace;
  font-size: 24px;
  color: var(--colour-text);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font: 100%/1.6 "Lora", serif;
  font-weight: 700;
  margin: 0 0 var(--pad-large) 0;
  color: var(--colour-text);
  text-align: center;
}

h1 {
  font-size: 3.125em;
}
h2 {
  font-size: 2.618em;
}
h3 {
  font-size: 1.931em;
}
h4 {
  font-size: 1.618em;
}
h5 {
  font-size: 1.194em;
}
h6 {
  font-size: 1em;
}

#title {
  font-size: 30vw;
  line-height: 1;
  background-size: cover;
  background-clip: text;
  -webkit-background-clip: text;
  color: var(--colour-text);
  transition: color 0.5s;
}

h2 {
  font-size: 15vw;
  color: var(--colour-heading);
  margin: 0 auto;
}

ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

li {
  --indent: 2em;
  padding-left: var(--indent);
  text-indent: calc(var(--indent) * -1);
  margin-bottom: var(--pad);
  line-height: 2;
}

a {
  color: var(--colour-primary);
  text-decoration: none;
  box-shadow: inset 0 -0.5em 0 var(--colour-secondary);
  transition-property: box-shadow;
  transition-duration: 0.2s;
  transition-timing-function: ease-in-out;
}

a:hover,
a:focus {
  box-shadow: inset 0 -0.15em 0 var(--colour-secondary);
}

a:focus {
  outline: none;
}

.center {
  margin: auto;
  max-width: var(--text-width);
}

@media (min-width: 44rem) {
  .other {
    max-width: var(--text-width);
    margin: var(--space) auto;
    display: grid;
    grid-template-columns: [title] 1fr [content] 2fr;
    grid-gap: var(--space) var(--pad);
    align-items: center;
  }

  h2 {
    font-size: 3rem;
    text-align: unset;
    margin: unset;
  }
}

@media (min-width: 70rem) {
  #title {
    font-size: 15rem;
    line-height: 1.6;
  }
}

.hidden {
  height: 0;
}

.loading {
  opacity: 0;
  transform: translateY(1em);
  transition: opacity 0.5s, transform 0.5s;
}

.loaded {
  opacity: 1;
  transform: translateY(0);
}

.loaded #title {
  color: transparent;
}

@media (prefers-color-scheme: dark) {
  body {
    background-color: #151515;
    color: #ddd;
  }

  h2 {
    color: #444;
  }

  a {
    color: #cce3ff;
    box-shadow: inset 0 -0.5em 0 #0c304d;
  }

  a:hover,
  a:focus {
    box-shadow: inset 0 -0.15em 0 #0c304d;
  }
}

